# fitRace

./: .gitignore  AGENT.md  AWS_CLOUD_REQUIREMENTS.md  CLOUD_UPDATE_TEST_PLAN.md  DEPLOYMENT.md  DESIGN.md  HARDWARE_TEST_PLAN.md  OTA_UPDATE.md  README.md  ROADMAP.md  RPI4_SOAK_TEST_PLAN.md  SESSION_HANDOFF.md  SYSTEM_FEATURES.md  TELEMETRY_SPEC.md  VIDEO_DEMO_PLAN.md  WATCH_MANUFACTURER_BLE_COMPATIBILITY_REQUIREMENTS.md  hyrox_simulator.py  pyproject.toml
.claude/: launch.json
deploy_update/: cloud_download_verification.md  release-ed25519-public.pem
deploy_update/kiosk/: README.md  fitracestudio-kiosk  install_hub_kiosk.sh  labwc-autostart  labwc-rc.xml  labwc-system-autostart
deploy_update/polkit/: 00-fitrace-nm.rules  50-fitrace-netdev-nm.rules
deploy_update/systemd/: README.md  fitracestudio-hub-updater.service  fitracestudio-hub.service
deploy_update/upload_config/: UPLOAD.md  upload_0.1.1_commands.sh  upload_0.1.2_commands.sh
deploy_update/wifi-fallback/: README.md  fitrace-set-wifi  (+2 more)
docs/: hyrox_integration_spec.md  hyrox_results_spec.md  hyrox_system_architecture_plan.md  stitch_system_settings_page.md
edge_node/: __init__.py  config.json  main.py  web_main.py
fitrace_common/: power_manager.py  wifi_manager.py  wifi_status.py
hub_server/: __init__.py  main.py
referece_for_edge_node/: config.py  demo_pi.py  logging_setup.py  test_interactive.py
scratch/: demo_avatar_duplicate.py
scripts/: demo_hub.py  deploy.sh  generate_feature_overview_pdf.py  record_demo_videos.mjs  verify_dashboard_ux.mjs
tests/: conftest.py
(+142 files in other folders)
