[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitrace-studio"
version = "0.1.0"
description = "Local-first FitRaceStudio Central Hub and Edge Node runtime."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.137.1",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "paho-mqtt==2.1.0",
  "pyserial>=3.5,<4",
  "bleak>=0.22,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest==9.1.0",
  "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
include = ["edge_node*", "hub_server*", "fitrace_common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
